tests/ui/borrowck/issue-64453.stderr
error: `Arguments::<'a>::new_const` is not yet stable as a const fn
  --> $DIR/issue-64453.rs:4:31
   |
LL | static SETTINGS_DIR: String = format!("");
   |                               ^^^^^^^^^^^
   |
   = help: add `#![feature(const_fmt_arguments_new)]` to the crate attributes to enable
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: cannot call non-const fn `format` in statics
  --> $DIR/issue-64453.rs:4:31
   |
LL | static SETTINGS_DIR: String = format!("");
   |                               ^^^^^^^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `Lazy::new(|| ...)` from the `once_cell` crate: https://crates.io/crates/once_cell
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0507]: cannot move out of static item `SETTINGS_DIR`
  --> $DIR/issue-64453.rs:14:37
   |
LL |     let settings_data = from_string(SETTINGS_DIR);
   |                                     ^^^^^^^^^^^^ move occurs because `SETTINGS_DIR` has type `String`, which does not implement the `Copy` trait

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0507.
For more information about an error, try `rustc --explain E0015`.
